Fikset code smell